--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
+    "serve": "11.3.2",
     "styled-components": "5.2.1"
   },
   "devDependencies": {
