--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@styled-icons/boxicons-regular": "10.18.0",
     "@styled-icons/boxicons-solid": "10.18.0",
     "@styled-icons/heroicons-outline": "10.19.0",
+    "@styled-icons/ionicons-outline": "10.24.0",
     "@styled-icons/material": "10.18.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
