--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Netflix clone",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server --mode 'development'",
     "build": "webpack --mode 'production'",
     "start": "serve dist -s"
   },
@@ -19,29 +19,30 @@
   },
   "homepage": "https://github.com/aramceballos/netflix#readme",
   "dependencies": {
-    "@material-ui/core": "4.11.3",
-    "@styled-icons/boxicons-regular": "10.18.0",
-    "@styled-icons/boxicons-solid": "10.18.0",
-    "@styled-icons/heroicons-outline": "10.19.0",
-    "@styled-icons/ionicons-outline": "10.24.0",
-    "@styled-icons/material": "10.18.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-router-dom": "5.2.0",
-    "serve": "11.3.2",
-    "styled-components": "5.2.1"
+    "@material-ui/core": "4.12.3",
+    "@styled-icons/boxicons-regular": "10.38.0",
+    "@styled-icons/boxicons-solid": "10.38.0",
+    "@styled-icons/heroicons-outline": "10.36.0",
+    "@styled-icons/ionicons-outline": "10.34.0",
+    "@styled-icons/material": "10.34.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-router-dom": "6.0.2",
+    "serve": "13.0.2",
+    "styled-components": "5.3.3"
   },
   "devDependencies": {
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/react-router-dom": "5.1.6",
-    "@types/styled-components": "5.1.7",
+    "@types/material-ui": "^0.21.12",
+    "@types/react": "17.0.37",
+    "@types/react-dom": "17.0.11",
+    "@types/react-router-dom": "5.3.2",
+    "@types/styled-components": "5.1.15",
     "file-loader": "6.2.0",
-    "html-webpack-plugin": "4.5.0",
-    "ts-loader": "8.0.4",
-    "typescript": "4.0.3",
-    "webpack": "4.44.2",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.0"
+    "html-webpack-plugin": "5.5.0",
+    "ts-loader": "9.2.6",
+    "typescript": "4.5.2",
+    "webpack": "5.64.4",
+    "webpack-cli": "4.9.1",
+    "webpack-dev-server": "4.6.0"
   }
 }
