--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/aramceballos/netflix#readme",
   "dependencies": {
-    "@material-ui/core": "4.12.3",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.3",
+    "@mui/styled-engine-sc": "^5.1.0",
     "@styled-icons/boxicons-regular": "10.38.0",
     "@styled-icons/boxicons-solid": "10.38.0",
     "@styled-icons/heroicons-outline": "10.36.0",
@@ -29,10 +32,9 @@
     "react-dom": "17.0.2",
     "react-router-dom": "6.0.2",
     "serve": "13.0.2",
-    "styled-components": "5.3.3"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/material-ui": "^0.21.12",
     "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
     "@types/react-router-dom": "5.3.2",
