--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode 'development'",
-    "build": "webpack --mode 'production'",
+    "build:esbuild": "esbuild src/index.tsx --bundle --minify --sourcemap --loader:.png=file --outfile=dist/out.js",
+    "build:webpack": "webpack --mode 'production'",
     "start": "serve dist -s"
   },
   "repository": {
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/aramceballos/netflix#readme",
   "dependencies": {
+    "@craftamap/esbuild-plugin-html": "^0.2.1",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.3",
@@ -28,6 +30,7 @@
     "@styled-icons/heroicons-outline": "10.36.0",
     "@styled-icons/ionicons-outline": "10.34.0",
     "@styled-icons/material": "10.34.0",
+    "esbuild": "^0.14.12",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "6.0.2",
