--- a/package.json
+++ b/package.json
@@ -20,22 +20,22 @@
   },
   "homepage": "https://github.com/aramceballos/netflix#readme",
   "dependencies": {
-    "@craftamap/esbuild-plugin-html": "^0.2.1",
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.2.3",
-    "@mui/styled-engine-sc": "^5.1.0",
+    "@craftamap/esbuild-plugin-html": "0.2.1",
+    "@emotion/react": "11.7.0",
+    "@emotion/styled": "11.6.0",
+    "@mui/material": "5.2.3",
+    "@mui/styled-engine-sc": "5.1.0",
     "@styled-icons/boxicons-regular": "10.38.0",
     "@styled-icons/boxicons-solid": "10.38.0",
     "@styled-icons/heroicons-outline": "10.36.0",
     "@styled-icons/ionicons-outline": "10.34.0",
     "@styled-icons/material": "10.34.0",
-    "esbuild": "^0.14.12",
+    "esbuild": "0.14.12",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "6.0.2",
     "serve": "13.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "5.3.3"
   },
   "devDependencies": {
     "@types/react": "17.0.37",
